# fula-contract-api

./: .env  .env.example  .gitignore  Cargo.toml  README.md
crates/contract-api-types/: Cargo.toml
crates/contract-api-types/src/: calls.rs  config.rs  lib.rs  types.rs
src/: api_calls.rs  args.rs  config.rs  contract.rs  main.rs  util.rs
