[package]
name = "functionland-contract-api"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
env_logger = "0.10.0"
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.2"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
contract-integration = { git = "https://github.com/SugarFunge/contract-integration", branch = "master", default-features = false }
serde_json = "1.0"
jsonrpsee-types = "0.18.2"
derive_more = { version = "0.99.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive", "full", "bit-vec"] }
scale-info = { version = "2.5.0", features = ["bit-vec"] }

[dependencies.subxt]
git = "https://github.com/SugarFunge/subxt.git"
branch = "feature/polkadot-v0.9.43"

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.43"
package = "sp-std"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.43"
package = "sp-core"
features = ["full_crypto"]